feat(ExperimentTracker): add interface and TensorBoard

--- a/tools/visualize_dataset.ipynb
+++ b/tools/visualize_dataset.ipynb
@@ -22,6 +22,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline\n",
     "import sklearn\n",
     "\n",
@@ -30,7 +31,8 @@
     "import librosa.display\n",
     "import IPython.display as ipd\n",
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -476,12 +478,12 @@
     "index = 42\n",
     "song_path = f\"{datasets_path}/GTZAN/genres_original/{labels[index]}/{paths[index]}\"\n",
     "y, sr = librosa.load(song_path)\n",
-    "print('y:', y, '\\n')\n",
-    "print('y shape:', np.shape(y), '\\n')\n",
-    "print('Sample Rate (KHz):', sr, '\\n')\n",
+    "print(\"y:\", y, \"\\n\")\n",
+    "print(\"y shape:\", np.shape(y), \"\\n\")\n",
+    "print(\"Sample Rate (KHz):\", sr, \"\\n\")\n",
     "\n",
     "# Verify length of the audio\n",
-    "print('Check Len of Audio:', 661794/22050)"
+    "print(\"Check Len of Audio:\", 661794 / 22050)"
    ]
   },
   {
@@ -513,9 +515,9 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (25, 5))\n",
+    "plt.figure(figsize=(25, 5))\n",
     "librosa.display.waveshow(y=y, sr=sr, color=\"#A300F9\")\n",
-    "plt.title(\"Sound Waves in Reggae 36\", fontsize = 23)"
+    "plt.title(\"Sound Waves in Reggae 36\", fontsize=23)"
    ]
   },
   {
@@ -555,19 +557,23 @@
    ],
    "source": [
     "# Default FFT window size\n",
-    "n_fft = 2048 # FFT window size\n",
-    "hop_length = 512 # number audio of frames between STFT columns (looks like a good default)\n",
+    "n_fft = 2048  # FFT window size\n",
+    "hop_length = (\n",
+    "    512  # number audio of frames between STFT columns (looks like a good default)\n",
+    ")\n",
     "\n",
     "# Short-time Fourier transform (STFT)\n",
     "stft = np.abs(librosa.stft(y, n_fft=n_fft, hop_length=hop_length))\n",
-    "print('Shape of D object:', np.shape(stft))\n",
+    "print(\"Shape of D object:\", np.shape(stft))\n",
     "\n",
     "# Convert an amplitude spectrogram to Decibels-scaled spectrogram.\n",
     "stft_db = librosa.amplitude_to_db(stft)\n",
     "\n",
     "# Creating the Spectogram\n",
-    "plt.figure(figsize = (25, 5))\n",
-    "librosa.display.specshow(stft_db, sr=sr, hop_length=hop_length, x_axis='time', y_axis='log', cmap='cool')\n",
+    "plt.figure(figsize=(25, 5))\n",
+    "librosa.display.specshow(\n",
+    "    stft_db, sr=sr, hop_length=hop_length, x_axis=\"time\", y_axis=\"log\", cmap=\"cool\"\n",
+    ")\n",
     "plt.colorbar()"
    ]
   },
@@ -602,8 +608,10 @@
    "source": [
     "mel_stft = librosa.feature.melspectrogram(y=y, sr=sr)\n",
     "mel_stft_db = librosa.amplitude_to_db(mel_stft)\n",
-    "plt.figure(figsize = (25, 5))\n",
-    "librosa.display.specshow(mel_stft_db, sr=sr, hop_length=hop_length, x_axis='time', y_axis='mel', cmap='cool')\n",
+    "plt.figure(figsize=(25, 5))\n",
+    "librosa.display.specshow(\n",
+    "    mel_stft_db, sr=sr, hop_length=hop_length, x_axis=\"time\", y_axis=\"mel\", cmap=\"cool\"\n",
+    ")\n",
     "plt.colorbar()\n",
     "mel_stft.shape"
    ]
