chore: improve formatting

--- a/tools/results_visualization.ipynb
+++ b/tools/results_visualization.ipynb
@@ -49,6 +49,7 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
+    "\n",
     "init_notebook_mode(connected=False)"
    ]
   },
@@ -1171,28 +1172,32 @@
     "\n",
     "cl_df = df[df.experiment_type == \"CL\"]\n",
     "for experiment_subtype in cl_df.experiment_subtype.unique():\n",
-    "    fig.add_trace(go.Scatter(\n",
-    "        x=cl_df[cl_df.experiment_subtype == experiment_subtype][\"train_task_name\"],\n",
-    "        y=cl_df[cl_df.experiment_subtype == experiment_subtype][\"F1 Score\"],\n",
-    "        mode=\"lines\",\n",
-    "        name=experiment_subtype,\n",
-    "    ))\n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=cl_df[cl_df.experiment_subtype == experiment_subtype][\"train_task_name\"],\n",
+    "            y=cl_df[cl_df.experiment_subtype == experiment_subtype][\"F1 Score\"],\n",
+    "            mode=\"lines\",\n",
+    "            name=experiment_subtype,\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "oracle_df = df[df.experiment_subtype == \"Oracle\"]\n",
-    "fig.add_trace(go.Scatter(\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(\n",
     "        x=[\"reggae-rock\"],\n",
     "        y=oracle_df[\"F1 Score\"],\n",
     "        mode=\"markers\",\n",
     "        name=\"Oracle\",\n",
     "        marker=dict(size=10),\n",
     "        marker_symbol=\"star\",\n",
-    "    ))\n",
+    "    )\n",
+    ")\n",
     "\n",
     "fig.update_layout(\n",
     "    width=1000,\n",
     "    height=600,\n",
     ")\n",
-    "iplot(fig)\n"
+    "iplot(fig)"
    ]
   }
  ],
