chore: apply ruff to experiments

--- a/embeddings-experiments/pcc_metrics.ipynb
+++ b/embeddings-experiments/pcc_metrics.ipynb
@@ -49,7 +49,7 @@
     "print(\"Train label count:\")\n",
     "centers = []\n",
     "labels = []\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "    centers.append(np.mean(train_embeddings[train_labels == label], axis=0))\n",
     "centers = np.array(centers)"
@@ -91,7 +91,7 @@
     "val_embeddings = np.load(\"gtzan/gtzan_val_embeddings.npy\")\n",
     "val_labels = np.load(\"gtzan/gtzan_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "val_similarities = -distance_matrix(val_embeddings, centers)\n",
     "val_preds = np.argmax(val_similarities, axis=1)\n",
@@ -137,7 +137,7 @@
     "test_labels = np.load(\"gtzan/gtzan_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "test_similarities = -distance_matrix(test_embeddings, centers)\n",
     "test_preds = np.argmax(test_similarities, axis=1)\n",
@@ -194,7 +194,7 @@
     "print(\"Train label count:\")\n",
     "centers = []\n",
     "labels = []\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "    centers.append(np.mean(train_embeddings[train_labels == label], axis=0))\n",
     "centers = np.array(centers)"
@@ -246,7 +246,7 @@
     "val_embeddings = np.load(\"vocalset-singer/vocalset-singer_val_embeddings.npy\")\n",
     "val_labels = np.load(\"vocalset-singer/vocalset-singer_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "val_similarities = -distance_matrix(val_embeddings, centers)\n",
     "val_preds = np.argmax(val_similarities, axis=1)\n",
@@ -302,7 +302,7 @@
     "test_labels = np.load(\"vocalset-singer/vocalset-singer_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "test_similarities = -distance_matrix(test_embeddings, centers)\n",
     "test_preds = np.argmax(test_similarities, axis=1)\n",
@@ -349,7 +349,7 @@
     "print(\"Train label count:\")\n",
     "centers = []\n",
     "labels = []\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "    centers.append(np.mean(train_embeddings[train_labels == label], axis=0))\n",
     "centers = np.array(centers)"
@@ -391,7 +391,7 @@
     "val_embeddings = np.load(\"vocalset-tech/vocalset-tech_val_embeddings.npy\")\n",
     "val_labels = np.load(\"vocalset-tech/vocalset-tech_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "val_similarities = -distance_matrix(val_embeddings, centers)\n",
     "val_preds = np.argmax(val_similarities, axis=1)\n",
@@ -437,7 +437,7 @@
     "test_labels = np.load(\"vocalset-tech/vocalset-tech_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "test_similarities = -distance_matrix(test_embeddings, centers)\n",
     "test_preds = np.argmax(test_similarities, axis=1)\n",
@@ -485,7 +485,7 @@
     "print(\"Train label count:\")\n",
     "centers = []\n",
     "labels = []\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "    centers.append(np.mean(train_embeddings[train_labels == label], axis=0))\n",
     "centers = np.array(centers)"
@@ -527,7 +527,7 @@
     "val_embeddings = np.load(\"nsynth/nsynth_val_embeddings.npy\")\n",
     "val_labels = np.load(\"nsynth/nsynth_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "val_similarities = -distance_matrix(val_embeddings, centers)\n",
     "val_preds = np.argmax(val_similarities, axis=1)\n",
@@ -573,7 +573,7 @@
     "test_labels = np.load(\"nsynth/nsynth_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")\n",
     "test_similarities = -distance_matrix(test_embeddings, centers)\n",
     "test_preds = np.argmax(test_similarities, axis=1)\n",
