--- a/embeddings-experiments/visualize_embeddings.ipynb
+++ b/embeddings-experiments/visualize_embeddings.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn.manifold import TSNE\n",
-    "import matplotlib.pyplot as plt"
+    "from sklearn.manifold import TSNE"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "train_labels = np.load(\"gtzan/gtzan_train_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(train_labels, return_counts=True)\n",
     "print(\"Train label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -57,9 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_train_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(train_embeddings)"
+    "tsne_train_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    train_embeddings\n",
+    ")"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "val_labels = np.load(\"gtzan/gtzan_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
     "print(\"Validation label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -133,9 +133,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_val_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(val_embeddings)"
+    "tsne_val_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    val_embeddings\n",
+    ")"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "test_labels = np.load(\"gtzan/gtzan_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -209,9 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_test_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(test_embeddings)"
+    "tsne_test_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    test_embeddings\n",
+    ")"
    ]
   },
   {
@@ -293,7 +293,7 @@
     "train_labels = np.load(\"vocalset-singer/vocalset-singer_train_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(train_labels, return_counts=True)\n",
     "print(\"Train label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -303,9 +303,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_train_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(train_embeddings)"
+    "tsne_train_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    train_embeddings\n",
+    ")"
    ]
   },
   {
@@ -379,7 +379,7 @@
     "val_labels = np.load(\"vocalset-singer/vocalset-singer_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
     "print(\"Validation label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -389,9 +389,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_val_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(val_embeddings)"
+    "tsne_val_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    val_embeddings\n",
+    ")"
    ]
   },
   {
@@ -465,7 +465,7 @@
     "test_labels = np.load(\"vocalset-singer/vocalset-singer_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -475,9 +475,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_test_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(test_embeddings)"
+    "tsne_test_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    test_embeddings\n",
+    ")"
    ]
   },
   {
@@ -549,7 +549,7 @@
     "train_labels = np.load(\"vocalset-tech/vocalset-tech_train_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(train_labels, return_counts=True)\n",
     "print(\"Train label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -559,9 +559,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_train_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(train_embeddings)"
+    "tsne_train_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    train_embeddings\n",
+    ")"
    ]
   },
   {
@@ -625,7 +625,7 @@
     "val_labels = np.load(\"vocalset-tech/vocalset-tech_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
     "print(\"Validation label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -635,9 +635,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_val_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(val_embeddings)"
+    "tsne_val_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    val_embeddings\n",
+    ")"
    ]
   },
   {
@@ -701,7 +701,7 @@
     "test_labels = np.load(\"vocalset-tech/vocalset-tech_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -711,9 +711,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_test_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(test_embeddings)"
+    "tsne_test_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    test_embeddings\n",
+    ")"
    ]
   },
   {
@@ -788,7 +788,7 @@
     "unique_labels, count_labels = np.unique(train_labels, return_counts=True)\n",
     "print(f\"Train total elements: {len(train_embeddings)}\")\n",
     "print(\"Train label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -798,9 +798,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_train_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0\n",
-    ").fit_transform(train_embeddings)"
+    "tsne_train_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=30.0).fit_transform(\n",
+    "    train_embeddings\n",
+    ")"
    ]
   },
   {
@@ -864,7 +864,7 @@
     "val_labels = np.load(\"nsynth/nsynth_val_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(val_labels, return_counts=True)\n",
     "print(\"Validation label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -874,9 +874,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_val_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=3\n",
-    ").fit_transform(val_embeddings)"
+    "tsne_val_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=3).fit_transform(\n",
+    "    val_embeddings\n",
+    ")"
    ]
   },
   {
@@ -940,7 +940,7 @@
     "test_labels = np.load(\"nsynth/nsynth_test_labels.npy\")\n",
     "unique_labels, count_labels = np.unique(test_labels, return_counts=True)\n",
     "print(\"Test label count:\")\n",
-    "for label, count in zip(unique_labels, count_labels):\n",
+    "for label, count in zip(unique_labels, count_labels, strict=False):\n",
     "    print(f\"    - {label}: {count}\")"
    ]
   },
@@ -950,9 +950,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne_test_embeddings = TSNE(\n",
-    "    n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=3\n",
-    ").fit_transform(test_embeddings)"
+    "tsne_test_embeddings = TSNE(n_components=2, learning_rate=\"auto\", init=\"random\", perplexity=3).fit_transform(\n",
+    "    test_embeddings\n",
+    ")"
    ]
   },
   {
